force-app/main/default/objects/leaseworks__Historical_Event_Task__c/leaseworks__Historical_Event_Task__c.object-meta.xml
<CustomObject>
    <label>Assembly Event Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assembly Event Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>