force-app/main/default/objects/leaseworks__Historical_Event_Task__c/fields/leaseworks__Engine_Module__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Module__c</fullName>
    <description>Module of the engine assembly</description>
    <inlineHelpText>Module of the engine assembly</inlineHelpText>
    <label>Engine Module</label>
    <length>50</length>
    <type>Text</type>
</CustomField>