force-app/main/default/objects/leaseworks__Historical_Event_Task__c/fields/leaseworks__Final_Workscope__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Final_Workscope__c</fullName>
    <label>Final Workscope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MIN / REPAIR</fullName>
            </value>
            <value>
                <fullName>MIN / PERF</fullName>
            </value>
            <value>
                <fullName>PERF</fullName>
            </value>
            <value>
                <fullName>OH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>