force-app/main/default/objects/leaseworks__Historical_Event_Task__c/fields/leaseworks__Remarks__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Remarks__c</fullName>
    <inlineHelpText>Enter any remarks here</inlineHelpText>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>