force-app/main/default/objects/leaseworks__Historical_Event_Task__c/fields/leaseworks__SuppRentEventReqmnt__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__SuppRentEventReqmnt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated Supplemental Rent Event Requirement where requirements for this claim are defined</inlineHelpText>
    <label>Supplemental Rent Event Requirement</label>
    <referenceTo>leaseworks__Supp_Rent_Event_Reqmnt__c</referenceTo>
    <relationshipLabel>Assembly Event Tasks</relationshipLabel>
    <relationshipName>Historical_Event_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>